theme aligning - shadow, border, background fixes

--- a/src/components/Pages/BugZeroUnique/Unique.css
+++ b/src/components/Pages/BugZeroUnique/Unique.css
@@ -45,10 +45,11 @@
 
 .step {
   border: 1.5px solid #f4c700 !important;
-
-  background-color: rgba(244, 199, 0, 0.164) !important;
-  box-shadow: none !important;
-  transition: transform 0.3s, box-shadow 0.3s;
+  background-color: #f4c7002a !important;
+  background: linear-gradient(120deg, #f4c7002a, #f4c70054)!important;
+  background-size: 200% 100%!important;
+  background-position: 100% 0!important;
+  transition: background-position .5s!important;
 }
 
 .step {
@@ -57,12 +58,12 @@
 }
 
 .step:hover {
-  box-shadow: 0 4px 8px 0 #00000015, 0 6px 20px 0 #00000015 !important;
+  background-position: 0 0!important;
+
+  box-shadow: 0 0px 2px 0 #f4c70050, 0 0px 16px 0 #f4c70050!important;
 }
 
-.content{
-  
-}
+
 .step .title {
   font-size: 23px !important;
   line-height: 23px;
