--- a/src/components/Pages/Team/teamStyle.css
+++ b/src/components/Pages/Team/teamStyle.css
@@ -1,7 +1,17 @@
 .bzTeam .ui.card{
-    background-color: #443D24!important;
+    background: linear-gradient(120deg, #f4c7002a, #f4c70054)!important;
     border: 1.5px solid #f4c700 !important;
+    background-size: 200% 100%!important;
+  background-position: 100% 0!important;
+  transition: background-position .5s!important;
+  box-shadow: none!important;
+
 }
+
+.bzTeam .ui.card:hover {
+    background-position: 0 0!important;
+    box-shadow: 0 0px 16px 0 #f4c70050!important;
+  }
 
 .bzTeam .header, .bzTeam a{
     color: #fff!important;
